--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,8 @@ management.endpoint.health.show-details=always
 
 # springboot security
 spring.security.enabled=false
+
+# Spring Security가 CSRF 토큰을 응답 쿠키에 포함하도록 설정
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=false
+server.servlet.session.cookie.same-site=strict
